--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6530,6 +6530,10 @@ ww1_USA.37.a:0 "The Persian people deserve freedom..."
   ww1_USA.42.t:0 "Railway Companies Plan to Hike Ticket Prices!"
   ww1_USA.42.d:0 "A collection of railway companies have all gathered together and agreed to increase ticket prices to increase their profits."
   ww1_USA.42.a:0 "Bastards."
+ww1_USA.117.t:0 "Roosevelt Prepares to Return to the United States After Africa Trip"
+ww1_USA.117.d:0 "Former president Theodore Roosevelt has been taking a vacation across Africa for over a year at this point. Going from British East Africa traveling to the Congon before following the Nile up to British Sudan. While a wild ride behind him, with over 11 thousand animals hunted by him in the trip alone, including lions, elephants, birds, and even cheetahs.\n\nWith the 1910 midterms heating up, however, Roosevelt has decided it's time to return home to campaign for progressives on the ballot. As Roosevelt prepared to get on the boat reserved for him, he exclaimed to his travel partners..."
+ww1_USA.117.a:0 "...We have a lot of campaigning to do, don't we"
+ww1_USA.117.b:0 "...Oh shit! Is that a group of 8 lions charging towards us?"
 riding_razor.tt:0 "This section of the tree is important for shifting the Republican party towards our prefered direction, increasing the £pol_power §HPolitical Power§! we gain by boosting or reducing the influence sides who support or oppose us."
   ww1_USA.42.b:0 "Let's meet with these companies and try to pressure them not to."
   ww1_USA.43.t:0 "Railway Companies Agree to Abandon Price Hikes"
