--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4853,6 +4853,7 @@
  TUR_subdue_bulgarians_tt:0 "Modify [TUR_get_state_minority] by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n\n"
  TUR_subdue_bulgarians_tt1:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n\n"
  TUR_subdue_bulgarians_tt2:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n\n"
+ TUR_subdue_bulgarians_tt3:0 "Modify £ww1_flag_ALB §YAlbanian Minority§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n\n"
  TUR_remove_south_slavic_effect_TUR_subdue_bulgarians:0 "Remove £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n[TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_local_factories][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_local_intel_to_enemies][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_resistance_decay][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_required_garrison_factor][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_recruitable_population_factor][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_state_production_speed_buildings_factor]"
  TUR_remove_greek_effect_TUR_subdue_bulgarians:0 "Modify [TUR_get_state_minority] by\n[TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_resistance_decay][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_required_garrison_factor]£manpower_texticon  Recruitable Population: §G+2.50%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.10%§!\n"
  TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_recruitable_population_factor_yes:0 "£manpower_texticon  Recruitable Population: [?TUR_ottoman_recruitable_population_factor_TUR_subdue_bulgarians|=2%+]\n"
@@ -4885,6 +4886,11 @@
  TUR_line_up_armenian_traitors_tt1:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
  TUR_line_up_armenian_traitors_tt2:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
  TUR_line_up_armenian_traitors_tt3:0 "Modify £ww1_flag_GEO  §YGeorgian Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
+ has_south_slavic_minority:0 "Has £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! present within the state"
+ has_greek_minority:0 "Has £ww1_game_rule_flag_GRE  §YGreek Minority§! present within the state"
+ has_armenian_minority:0 "Has £ww1_flag_ARM  §YArmenian Minority§! present within the state"
+ has_assyrian_minority:0 "Has £ww1_flag_ASY  §YAssyrian Minority§! present within the state"
+ has_kurdish_minority:0 "Has £ww1_flag_KUR  §YKurdish Minority§! present within the state"
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
