conservative France focuses

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1216,6 +1216,7 @@
  FRA_jacques_bainville:0 "Jacques Bainville"
  FRA_alexandre_ribot:0 "Alexandre Ribot"
  FRA_jacques_piou:0 "Jacques Piou"
+ FRA_leon_daudet:0 "Léon Daudet"
  FRA_nicolas_saclois:0 "Nicolas Saclois"
  FRA_matthieu_abriot:0 "Matthieu Abriot"
  FRA_ernest_monis:0 "Ernest Monis"
