--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -856,6 +856,16 @@ FRA_exceptional_loan_to_indochina_ended:0 "Investments are done"
 
  FRA_important_law_that_will_comeback:0 "\nIf this law is not passed, it will be proposed again in 60 days, until it is passed by the §Yparliament§! and the §Ysenate§!"
 
+FRA_too_much_reform_can_break_the_coalition:0 "§RPushing the Reforms too far can lead to the coalition breakout.§!"
+
+FRA_far_right_leave_coalition:0 "§LNationalists§! will leave our §YConservative Alliance§!, making us lose [?nationalist|Y0]§R seats.§!"
+
+FRA_law_against_far_right_leagues:0 "Law Against Far-Right Leagues"
+FRA_law_against_far_right_leagues_desc:0 "§YJacques Piou§!'s bill proposes the condemnation and banning of any organization deemed "anti-republican" or undermining the integrity of property and people.\n\nThis law allows faster judgment of right-wing leagues, in particular through their systematic registration and the listing of its members."
+
+FRA_dreyfusard_act:0 "Dreyfusard Act"
+FRA_dreyfusard_act_desc:0 "§Y[FRA.getLeader]§!'s bill' allows the supervision of media accusations, aimed at combating a possible 4th power in France (power of the media). The proposal regulates the processing of information and allows legal action to be taken in the event of dissemination of unverified or invalid information.\n\nThe law also projects a government note on the Dreyfus affair, officially declaring in the bill that the lieutenant colonel was a victim of this fourth power."
+
  FRA_unlock_HLM_focus:0 "Unlock Focus : §YHBM Project§!"
 
  FRA_HBM_law:0 "HBM Law"
