--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6893,6 +6893,12 @@ FRA_conservatives_and_republican_federation_merge:0 "§3Conservatives§! and §2
 
  FRA_reveleation_of_second_case_of_cards:0 "This §YFocus§! will reveal a discriminatory promotion system in the army, favoring §Rsocialist§! and anti-Christian officers before §Lnationalist§! elements.\n\n§RIt could be a deadly blow to the left.§!"
 
+ FRA_ww1_center_right_domination:0 "Center-Right Domination"
+ FRA_ww1_center_right_domination_desc:0 "The alliance of rights represents all conservative movements, largely rallied by Jacques Piou and his close collaborators. The royalist and nationalist movements secretly attempted to neutralize Piou's leadership in order to take control of the coalition. It will be necessary to lead an internal political campaign intended to put an end to this anti-Republican quarrel."
+
+ FRA_ww1_daudet_takeover:0 "Daudet Takeover"
+ FRA_ww1_daudet_takeover_desc:0 "The Christian coalition drew its sources from the fight of the republican monarchists of popular action then French action and nationalists. The national project must be oriented around the restoration of more traditional and nationalist values as part of our national influence and our unity as a people."
+
  FRA_ww1_fund_science_po:0 "Fund ELSP"
  FRA_ww1_fund_science_po_desc:0 "The Free School of Political Sciences (ELSP), colloquially known as “Sciences Po”, is a private French higher education establishment created in 1871 by Émile Boutmy. It trains some of the republic's senior executives, as well as certain major industrialists and politicians. Funding and expanding the activities of this school will enable technological, societal and cultural innovation."
 
