--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -325,6 +325,7 @@
  monarchist_nationalist:0 "Monarchist Nationalist"
  federative_socialist:0 "Federative Socialist"
  federative_republican:0 "Federative Republican"
+ christian_nationalist:0 "Christian Nationalist"
  moderate_socialist:0 "Moderate Socialist"
  consensual_figure:0 "Consensual Figure"
  anarchist_author:0 "Anarchist Author"
