--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1833,6 +1833,10 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_france.413.d:0 "The governor general of Indochina [IND.getLeader] saw his funding requests validated by the parliament and the senate in mainland France. 90 million francs will be loaned to Indochina as part of massive investments in the irrigation of key cities like Vinh-Yen or Song Cau. The program also provides funding for administration, education and infrastructure."
  ww1_france.413.a:0 "Thanks to Paris"
 
+ ww1_france.414.t:0 "Right Wing of the Coalition Rising"
+ ww1_france.414.d:0 "Following the union of the AF and the PLA, but also the phenomenal revival of the popularity of Catholic assemblies within the population, particularly with workers' circles and the UCIDS, the political situation also changed. Opposed within the alliance of the rights, Jacques Piou and Léon Daudet clashed internally on national and identity issues.\n\nIf the first favored a "soft" conservative right-wing republic, Daudet is a convinced restorationist, very popular following Pope Pius X's approval of his political movement. Following a vote within the coalition, Piou withdrew from his role as leader of the wing in favor of Daudet."
+ ww1_france.414.a:0 "We are the “real” Right!"
+
  #BELGIUM
  ww1_belgium.1.t:0 "Rape of Belgium"
  ww1_belgium.1.desc:0 "Reports have come in describing the outright barbaric treatment of Belgian civilians by Germans. Anticipating guerrilla attacks from francs-tireurs who don’t actually exist, German commanders have taken civilian hostages as they pass through towns and villages, then shoot the hostages in groups whenever German soldiers are killed.\n\nBlamed on shadow guerrillas, the usual stray bullets and friendly fire incidents have already resulted in hundreds of murdered Belgians, and for reasons that remain unclear, the historic city and university of Louvain were burned.\n\nJust like looting and murder, rape was widespread."
