--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1177,4 +1177,5 @@
  SISAM_STATE:0 "Sisam"
  AHIKERYA_STATE:0 "Ahikerya"
  US_VIRGIN_ISLANDS:0 "United States Virgin Islands"
+ GANJA_STATE:0 "Ganja"
  
