Historical Rapallo Zara

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1005,6 +1005,7 @@
  STATE_1003:0 "Renkyō Railway"
  STATE_1004:0 "Anpō Railway"
  STATE_1005:0 "Jingbin Railway"
+ STATE_1006:0 "Città di Zara"
 
  YODONG_STATE:0 "Yodong"
  SEOGANDO_STATE:0 "Seogando"
@@ -1178,4 +1179,4 @@
  AHIKERYA_STATE:0 "Ahikerya"
  US_VIRGIN_ISLANDS:0 "United States Virgin Islands"
  GANJA_STATE:0 "Ganja"
- 
+ CITY_OF_ZADAR_STATE:0 "Grad Zadar"
