--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2034,7 +2034,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_establish_order_in_macedonia_tt4:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\nDivision Attrition: §G-50.0%§!\n"
  TUR_integrate_macedonia:0 "Integrate [FROM.GetName]"
  TUR_integrate_macedonia_desc:0 "Macedonia's importance for the empire combined with the local Turkish population makes it a real possibility for these vilayets to become a core part of our empire. Through increased opinion with locals, we can successfully integrate the region."
- TUR_integrate_macedonia_tt:0 "Division Attrition value for [TUR_get_state_minority] is §G0.0% or less§!"
+ TUR_integrate_macedonia_tt:0 "Division Attrition value for [TUR_get_state_minority] is §G0.0%§! or §Gless§!"
  TUR_tax_collection_in_albania:0 "Tax Collection in [FROM.GetName]"
  TUR_tax_collection_in_albania_desc:0 "Muslim Albanians in [FROM.GetName] have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
  TUR_tax_collection_in_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\nResistance Target: §R+20%§!\nRecruitable Population: §G+5.00%§!\n"
