--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4485,7 +4485,7 @@
  TUR_tribal_light_cavalry_regiments_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nResistance Decay Speed: §G+10%§!\nIrregular Cavalry Attack: §G+10.00%§!\nIrregular Cavalry Defense: §G+10.00%§!\n\n"
  TUR_utilize_gendarmerie:0 "Utilize Gendarmerie"
  TUR_utilize_gendarmerie_desc:0 "Gendarmerie has remained as a disconnected police force from our army. But there's much room to gain from integrating these rural police forces into our army."
- TUR_utilize_gendarmerie_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nRecruitable Population: §G5%§!\nDivision Recovery Rate: §G+5.0%§!\nDamage to Garrisons: §G-10.00%§!\n\nModify occupation law §Y$TUR_gendarmerie$§! by: \n $MODIFIER_RESISTANCE_TARGET$: §G-5%§! \n $MODIFIER_RESISTANCE_DAMAGE_TO_GARRISONS$: §G-10.00%§! \n $MODIFIER_REQUIRED_GARRISON_FACTOR$: §G-5%§! \n $MODIFIER_COMPLIANCE_GAIN_ADD$: §G+0.002%§! \n\n"
+ TUR_utilize_gendarmerie_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nRecruitable Population: §G5%§!\nDivision Recovery Rate: §G+5.0%§!\nDamage to Garrisons: §G-10.00%§!\n\nModify occupation law §Y$TUR_gendarmerie$§! by: \n $MODIFIER_RESISTANCE_TARGET$: §G-5%§! \n $MODIFIER_RESISTANCE_DAMAGE_TO_GARRISONS$: §G-10.00%§! \n $MODIFIER_REQUIRED_GARRISON_FACTOR$: §G-5%§! \n $MODIFIER_COMPLIANCE_GAIN_ADD$: §R-0.001%§! \n\n"
  TUR_camel_companies:0 "Camel Companies"
  TUR_camel_companies_desc:0 "Our empire is surrounded by endless deserts, making it extremely hard to progress inlands to pacify regions. But to our luck, utilizing camelry by attaching them in recon duties will give us the upper hand."
  TUR_camel_companies_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nReconnaissance: §G+5.0%§!\nHot acclimatization gain factor: §G+10.0%§!\n\nEnables §YCamelry Recon Detachment§!\n§HInfantry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!\n§HCavalry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!\n§HCamelry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!"
@@ -4600,9 +4600,9 @@
  TUR_defense_of_trablusgarp_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nLocal Supplies: §G+10%§!\nRecruitable Population: §G+5.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nWar Support: §G+0.20%§!\n\n"
  TUR_law_on_churches:0 "Law on Churches"
  TUR_law_on_churches_desc:0 "Under the Millet system, all rumelian Orthodox Christians were dependent on the Greek Patriarchate for religious matters. Yet this law is widely unpopular among our Bulgarian population. By separating Bulgarian churches and schools from the Greek religious jurisdiction, we can settle ethnic tensions and struggles in the Macedonian region of our empire."
- TUR_law_on_churches_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\nDivision Attrition: §G-10.0%§!\nCompliance Growth Speed: §G+10%§!\n\n"
- TUR_law_on_churches_tt2:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\nCompliance Growth Speed: §G+10%§!\n\n"
- TUR_law_on_churches_tt3:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! by\nCompliance Growth Speed: §G+10%§!\n\n"
+ TUR_law_on_churches_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\nDivision Attrition: §G-10.0%§!\nCompliance Growth Speed: §G+15%§!\n\n"
+ TUR_law_on_churches_tt2:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\nCompliance Growth Speed: §G+15%§!\n\n"
+ TUR_law_on_churches_tt3:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! by\nCompliance Growth Speed: §G+15%§!\n\n"
  TUR_ottoman_law_on_church:0 "Ottoman Law on Church"
  TUR_ottoman_law_on_church_2:0 "Ottoman Law on Church"
  TUR_law_on_churches_tt4:0 "Unlocks §YEstablish Order in Macedonia§! Decisions\nUnlocks §YIntegrate Macedonia§! Decisions\n"
@@ -4632,7 +4632,7 @@
  TUR_ottoman_public_debt_administration_desc:0 "As our empire's debts were accimulated due to foreign reliance, Europeans established Ottoman Public Debt Administration in 1881 with the intention of collecting Ottoman taxes with an autonomous body. As this body hinders our national sovereignty, we should continue paying our debts to the administration as soon as possible."
  TUR_construct_hindiya_barrage:0 "Construct Hindiya Barrage"
  TUR_construct_hindiya_barrage_desc:0 "The Euphrates river gives us opportunities to construct renewable energy stations to use it to our advantage. Hindiya Barrage, a barrage that was proposed to be constructed in Euphrates, will help us with producing electricity."
- TUR_construct_hindiya_barrage_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nLocal Construction Speed: §G+5%§!\n\n"
+ TUR_construct_hindiya_barrage_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nLocal Construction Speed: §G+3%§!\n\n"
  TUR_form_turkish_petroleum_company:0 "Form Turkish Petroleum Company"
  TUR_form_turkish_petroleum_company_desc:0 "We can't let the foreigners drill our soil as they please. We must compete against them for the sovereignty over our own oil fields. By forming Turkish Petroleum Company, we can combat foreign domain our our oil fields."
  TUR_umur_u_nafia_muduriyet_i_umumiyesi:0 "Umur-u Nafia Müdüriyet-i Umumiyesi"
@@ -4886,12 +4886,13 @@
  TUR_line_up_armenian_traitors_tt1:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
  TUR_line_up_armenian_traitors_tt2:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
  TUR_line_up_armenian_traitors_tt3:0 "Modify £ww1_flag_GEO  §YGeorgian Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
+ TUR_central_governance_in_arabia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nLocal Supplies: §G+5%§!\nLocal Construction Speed: §G+5%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\n\n"
+ TUR_temporary_law_of_deportation_tt:0 "Unlocks decisions to §YExterminate Armenians§!.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\nUnlocks decisions to §YSlaughter Assyrians§!.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times."
  has_south_slavic_minority:0 "Has £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! present within the state"
  has_greek_minority:0 "Has £ww1_game_rule_flag_GRE  §YGreek Minority§! present within the state"
  has_armenian_minority:0 "Has £ww1_flag_ARM  §YArmenian Minority§! present within the state"
  has_assyrian_minority:0 "Has £ww1_flag_ASY  §YAssyrian Minority§! present within the state"
  has_kurdish_minority:0 "Has £ww1_flag_KUR  §YKurdish Minority§! present within the state"
- TUR_temporary_law_of_deportation_tt:0 "Unlocks decisions to §YExterminate Armenians§!.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\nUnlocks decisions to §YSlaughter Assyrians§!.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times."
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
