--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4654,7 +4654,7 @@
  TUR_mustafa_asim_pasa:0 "Mustafa Asım Paşa"
  TUR_depoliticize_the_army:0 "Depoliticize the Army"
  TUR_depoliticize_the_army_desc:0 "As our minister of war Mahmud Şevket Paşa has adress the parliament, the greatest problem of our empire is neither the finances nor the foreign powers. It remains as the military involvement into politics by both sides. Unless we work on that issue, the army will continue to coup the politics. Under Mahmud Şevket Paşa's lead, we will work towards depoliticizing the army."
- TUR_depoliticize_the_army_tt:0 "Unlocks Decisions to §YDepoliticize the Army§!, working towards curtailing the power of §Yİttihadist Officers§! and §Yİtilafist Officers§!.\n"
+ TUR_depoliticize_the_army_tt:0 "Unlocks §YDepoliticize the Army§! Decisions, working towards curtailing the power of §Yİttihadist Officers§! and §Yİtilafist Officers§!.\n"
  TUR_elections_of_1912:0 "Elections of 1912"
  TUR_elections_of_1912_desc:0 "As the elections approach in the empire, the already well established İttihat ve Terakki and the newly organized liberals started to oppose each other. As many speculate, this will evolve into an undemocratic environment, and perhaps a violent elections."
  TUR_elections_of_1912_tt:0 "When the §YGeneral Election§! happens in late §YNovember 1912§!, this focus will automatically be completed"
@@ -4789,7 +4789,7 @@
  TUR_encourage_private_economic_participation_desc:0 "Liberalism cannot achieved through foreign investments on its own. We have to let state take a back step in order for individuals to participate in the economy."
  TUR_expand_trade_ports:0 "Expand Trade Ports"
  TUR_expand_trade_ports_desc:0 "There are several centralized cities and large trading ports in our empire benefiting from global trade. By expanding ports that can serve as a hub in global trade, we can foster regional development."
- TUR_expand_trade_ports_tt:0 "Unlocks decisions to §YExpand Foreign Trade§!, allowing us to improve several large metropolises and expanding their §Yforeign trade§!."
+ TUR_expand_trade_ports_tt:0 "Unlocks §YExpand Foreign Trade§! Decisions, allowing us to improve several large metropolises and expanding their §Yforeign trade§!."
  TUR_protect_local_producers:0 "Protect Local Producers"
  TUR_protect_local_producers_desc:0 "Market deregulation comes at a cost. Previously forces that protected our population has been dissolved in favor of free market. We must introduce some checks and balances for the best of our population."
  TUR_listian_protectionism:0 "Listian Protectionism"
@@ -4800,7 +4800,7 @@
  TUR_tesvik_i_sanayi_muvakkati_desc:0 "We can't sit and wait the creation of a national industry by doing nothing. Through a set of laws to encourage industrialization, we can accelerate the creation of a national industry."
  TUR_transport_anatolian_grain:0 "Transport Anatolian Grain"
  TUR_transport_anatolian_grain_desc:0 "Anatolia still remains mostly disconnected from the rest of our empire. Even so, the agricultural products are not being able to be transported to big cities. If we improve the infrastructure in the region, we can deliver Anatolian grain to the rest of our empire."
- TUR_transport_anatolian_grain_tt:0 "Unlocks decisions to §YUtilize Anatolian Grain§!, allowing us to improve §YAnatolian Grain§! national spirit as well as preventing the side effects of a possible §Yblockade§!."
+ TUR_transport_anatolian_grain_tt:0 "Unlocks §YUtilize Anatolian Grain§! Decisions, allowing us to improve §YAnatolian Grain§! national spirit as well as preventing the side effects of a possible §Yblockade§!."
  TUR_kickstart_turkish_merchant_class:0 "Kickstart Turkish Merchant Class"
  TUR_kickstart_turkish_merchant_class_desc:0 "Most merchants of our empire are non-muslim groups, while the Turkish participation in the economy remains incomparably low. If we truly want to create a national economy, we have to create a Turkish merhanct class."
  TUR_agricultural_obligation_law:0 "Agricultural Obligation Law"
@@ -4862,7 +4862,7 @@
  TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_local_factories_yes:0 "£civ_factory  Local Factories: [?TUR_ottoman_local_factories_TUR_subdue_bulgarians|=0%+]\n"
  TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_local_intel_to_enemies_yes:0 "£operatives_build_intel_network_texticon  Intel to Enemies: [?TUR_ottoman_local_intel_to_enemies_TUR_subdue_bulgarians|=0%-]\n"
  TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_state_production_speed_buildings_factor_yes:0 "£construction_speed_texticon  Local Construction Speed: [?TUR_ottoman_state_production_speed_buildings_factor_TUR_subdue_bulgarians|=0%+]\n"
- TUR_destruction_of_the_bulgarians_tt:0 "Unlocks decisions to §YDestroy Bulgarians§!.\nThese decisions will allow us to reduce the effects of £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!, aiming to §Ytotally getting rid of it§! selected enough times."
+ TUR_destruction_of_the_bulgarians_tt:0 "Unlocks §YDestroy Bulgarians§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\n"
  TUR_displace_christians_from_economy_tt:0 "Modify [TUR_get_state_minority] by\nLocal Factories: §G+5%§!\nLocal Construction Speed: §R-2%§!\n\n"
  TUR_displace_christians_from_economy_tt1:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\nLocal Factories: §G+5%§!\nLocal Construction Speed: §R-2%§!\n\n"
  TUR_displace_christians_from_economy_tt2:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\nLocal Factories: §G+5%§!\nLocal Construction Speed: §R-2%§!\n\n"
@@ -4876,7 +4876,7 @@
  TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_local_factories_yes:0 "£civ_factory  Local Factories: [?TUR_ottoman_local_factories_TUR_displace_christians_from_economy|=0%+]\n"
  TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_local_intel_to_enemies_yes:0 "£operatives_build_intel_network_texticon  Intel to Enemies: [?TUR_ottoman_local_intel_to_enemies_TUR_displace_christians_from_economy|=0%-]\n"
  TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_state_production_speed_buildings_factor_yes:0 "£construction_speed_texticon  Local Construction Speed: [?TUR_ottoman_state_production_speed_buildings_factor_TUR_displace_christians_from_economy|=0%+]\n"
- TUR_greek_deportations_tt:0 "Unlocks decisions to §YDeport Greeks§!.\nThese decisions will allow us to reduce the effects of £ww1_game_rule_flag_GRE  §YGreek Minority§!, aiming to §Ytotally getting rid of it§! selected enough times."
+ TUR_greek_deportations_tt:0 "Unlocks §YDeport Greeks§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_game_rule_flag_GRE  §YGreek Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\n"
  TUR_sedentarization_of_kurdish_tribes_tt:0 "Modify [TUR_get_state_minority] by\nResource Gain Efficiency: §G+5.00%§!\nRecruitable Population: §G+10.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\nWar Support: §R-0.10%§!\n\n"
  TUR_sedentarization_of_kurdish_tribes_tt1:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\nResource Gain Efficiency: §G+5.00%§!\nRecruitable Population: §G+10.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\nWar Support: §R-0.10%§!\n\n"
  TUR_sedentarization_of_kurdish_tribes_tt2:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\nResource Gain Efficiency: §G+5.00%§!\nRecruitable Population: §G+10.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\nWar Support: §R-0.10%§!\n\n"
@@ -4887,7 +4887,8 @@
  TUR_line_up_armenian_traitors_tt2:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
  TUR_line_up_armenian_traitors_tt3:0 "Modify £ww1_flag_GEO  §YGeorgian Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
  TUR_central_governance_in_arabia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nLocal Supplies: §G+5%§!\nLocal Construction Speed: §G+5%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\n\n"
- TUR_temporary_law_of_deportation_tt:0 "Unlocks decisions to §YExterminate Armenians§!.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\nUnlocks decisions to §YSlaughter Assyrians§!.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times."
+ TUR_central_governance_in_arabia_tt2:0 "Unlocks §YIntegrate Syrian Vilayets§! Decisions\n"
+ TUR_temporary_law_of_deportation_tt:0 "Unlocks §YExterminate Armenians§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\nUnlocks §YSlaughter Assyrians§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\n"
  has_south_slavic_minority:0 "Has £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! present within the state"
  has_greek_minority:0 "Has £ww1_game_rule_flag_GRE  §YGreek Minority§! present within the state"
  has_armenian_minority:0 "Has £ww1_flag_ARM  §YArmenian Minority§! present within the state"
