--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -911,6 +911,7 @@
  ww1_france.69.i:0 "The warmonger Georges Clemenceau."
  ww1_france.69.j:0 "Alexandre Millerand is exeperimented."
  ww1_france.69.k:0 "Alexandre Ribot, an expert in finance and foreign affairs."
+ ww1_france.69.l:0 "Jacques Piou can unite the right."
  ww1_france.69.m:0 "Maurice Pujo, a popular nationalist."
  ww1_france.71.t:0 "Ernest Monis Retires"
  ww1_france.71.d:0 "The President of the Council was recently the victim of an accident during the Paris-Madrid air race organized at the beginning of the summer. As a result, Enerst Monis had to resign, and President Fallières urgently appointed Joseph Caillaux."
