--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -328,6 +328,7 @@
  christian_nationalist:0 "Christian Nationalist"
  moderate_socialist:0 "Moderate Socialist"
  consensual_figure:0 "Consensual Figure"
+ christian_republicain:0 "Christian Republicain"
  anarchist_author:0 "Anarchist Author"
  industrial_reformer:0 "Industrial Reformer"
  democratic_fighter:0 "Fighter for Democracy"
