--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -2890,7 +2890,7 @@
  BUL_black_sea_presence:0 "Black Sea Presence"
  BUL_black_sea_presence_desc:0 "The Ottoman Navy may be weak, but could easily blockade us. we must build our own fleet to counter them."
  BUL_submarine_research:0 "Submarine Research"
- BUL_submarine_research_desc:0 ""
+ BUL_submarine_research_desc:0 "Although mostly untested, submarine technology could prove useful, especially for nations with small navies. we can finally strike our enemies from the deep."
  BUL_varna_port:0 "Varna Port"
  BUL_varna_port_desc:0 "Varna is our main acess to the sea, and through which most trade flows through.upgrading its facilities and expanding them would go a long way towards modernising our country"
  BUL_mediterranean_sea_access:0 "Mediterranean Sea Access"
