--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2062,6 +2062,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_level_down:0 "Modify [TUR_get_state_minority] by\n"
  TUR_minority_stability_war_support_down:0 "[TUR_minority_stability_war_support_down]"
  TUR_minority_stability_war_support_down_yes:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n"
+ TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nRecruitable Population: §G+5.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.10%§!\n"
+
 
  TUR_minority_local_factories_down:0 "[TUR_minority_local_factories_down]"
  TUR_minority_local_factories_normal:0 "£civ_factory  Local Factories: §G+5%§!\n"
