--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2083,11 +2083,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_intel_to_enemies_2:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-2%§!\n"
  TUR_minority_intel_to_enemies_1:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-1%§!\n"
  TUR_minority_recruitable_population_down:0 "[TUR_minority_recruitable_population_down]"
- TUR_minority_recruitable_population_normal:0 "£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
- TUR_minority_recruitable_population_4_5:0 "£manpower_texticon  Recruitable Population: §G+4.50%§!\n"
- TUR_minority_recruitable_population_4:0 "£manpower_texticon  Recruitable Population: §G+4.00%§!\n"
- TUR_minority_recruitable_population_3_5:0 "£manpower_texticon  Recruitable Population: §G+3.50%§!\n"
- TUR_minority_recruitable_population_3:0 "£manpower_texticon  Recruitable Population: §G+3.00%§!\n"
+ TUR_minority_recruitable_population2_down:0 "[TUR_minority_recruitable_population2_down]"
+ TUR_minority_recruitable_population_normal:0 "£manpower_texticon  Recruitable Population: §G+3.00%§!\n"
  TUR_minority_recruitable_population_2_5:0 "£manpower_texticon  Recruitable Population: §G+2.50%§!\n"
  TUR_minority_recruitable_population_2:0 "£manpower_texticon  Recruitable Population: §G+2.00%§!\n"
  TUR_minority_recruitable_population_1_5:0 "£manpower_texticon  Recruitable Population: §G+1.50%§!\n"
