--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -860,6 +860,8 @@ FRA_too_much_reform_can_break_the_coalition:0 "§RPushing the Reforms too far ca
 
 FRA_far_right_leave_coalition:0 "§LNationalists§! will leave our §YConservative Alliance§!, making us lose [?nationalist|Y0]§R seats.§!"
 FRA_SFIO_leave_coalition:0 "§RSFIO§! will leave our §YConservative Alliance§!, making us lose [?SFIO|Y0]§R seats.§!"
+FRA_independents_radicals_leave_coalition:0 "§1Independent Radicals§! will leave our §YConservative Alliance§!, making us lose [?independent_radicals|Y0]§R seats.§!"
+FRA_some_independents_radicals_join_us:0 "§GSome §1Independent Radicals§! will leave their party and join us.§!"
 
 
 FRA_law_against_far_right_leagues:0 "Law Against Far-Right Leagues"
