--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6899,6 +6899,11 @@ FRA_conservatives_and_republican_federation_merge:0 "§3Conservatives§! and §2
  FRA_ww1_daudet_takeover:0 "Daudet Takeover"
  FRA_ww1_daudet_takeover_desc:0 "The Christian coalition drew its sources from the fight of the republican monarchists of popular action then French action and nationalists. The national project must be oriented around the restoration of more traditional and nationalist values as part of our national influence and our unity as a people."
 
+FRA_SFIO_and_radicals_will_oppose_this:0 "\n§R§OSFIO§! and §OIndependant Socialists§! will Strongly Oppose the passage of this law. Even if they do not have a majority in the §Yparliament§! and the §Ysenate§!, they risk provoking an Insurrectional Situation!"
+
+ FRA_ww1_revise_1905_law:0 "Revise 1905 Law"
+ FRA_ww1_revise_1905_law_desc:0 "The law of 1905 separated the church from the state and constituted France as a secular nation. This law was an error, it deprived the people of a common culture and moral values which made the prestige of our civilization. In addition to the many supports we now have within parliament, we know that a large part of the French population is religious and will be with us in this vital reform."
+
  FRA_ww1_fund_science_po:0 "Fund ELSP"
  FRA_ww1_fund_science_po_desc:0 "The Free School of Political Sciences (ELSP), colloquially known as “Sciences Po”, is a private French higher education establishment created in 1871 by Émile Boutmy. It trains some of the republic's senior executives, as well as certain major industrialists and politicians. Funding and expanding the activities of this school will enable technological, societal and cultural innovation."
 
